@@ -1,3 +1,8 @@
+2011-11-07  Jason Merrill  <jason@redhat.com>
+
+	PR c++/50870
+	* g++.dg/cpp0x/decltype35.C: New.
+
 2011-11-04  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* g++.dg/other/offsetof7.C: New test.
